bug fix - HTML id of svg graphs is not always the same new query uses class name of graph
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@2094 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/scripts/report_template.html
+++ b/scripts/report_template.html
@@ -223,7 +223,7 @@
 
             function zoom()
             {
-			  graph = window.frames[activeWindow].document.getElementById('graph0');
+			  graph = window.frames[activeWindow].document.getElementsByClassName("graph")[0];
 
 			  transforms = graph.getAttribute("transform").split(" ");
 
