--- a/scripts/report_template.html
+++ b/scripts/report_template.html
@@ -122,7 +122,7 @@
                 </td>
                 <td colspan="2">
                 <div>
-					<div id="zoomSliderContainer" onmousemove="setZoomLevel();" onmouseup="zoom();" style="width:500px; overflow-x:scroll; overflow-y:hidden; float:left; margin-left:5px; margin-right:5px;">
+					<div id="zoomSliderContainer" onmousemove="setZoomLevel();" onmouseup="setZoomLevel();zoom();" style="width:500px; overflow-x:scroll; overflow-y:hidden; float:left; margin-left:5px; margin-right:5px;">
 						<div id="zoomSliderContent" style="width:1450px; height:18px;">
 							<div id="zoomLevelLabel" style="position:absolute; left:500px; width:500px; text-align:center;">
 								100
