--- a/scripts/report-template.html
+++ b/scripts/report-template.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
     <head>       
-        <title>CPAChecker Report</title>
+        <title>CPAchecker Report</title>
         <style>
 .edge {
     cursor: pointer;
@@ -17,7 +17,7 @@ html,body {
     position: absolute;
     left: 0px;
     right: 0px;
-    padding: 10px;
+    padding: 7px;
     text-align: center;
 }
 
@@ -34,26 +34,26 @@ html,body {
 
 #leftContent {
     position: absolute;
-    top: 80px;
+    top: 40px;
     bottom: 0px;
-    width: 400px;
-    border: 1px solid black;
-    margin: 5px;
+    width: 450px;
+    border-top: 1px solid black;
+    border-right: 1px solid black;
 }
 
 #rightContent {
     position: absolute;
-    top: 80px;
+    top: 40px;
     bottom: 0px;
-    left: 408px;
+    left: 455px;
     right: 0px;
     min-width: 400px;
-    border: 1px solid black;
-    margin: 5px;
+    border-top: 1px solid black;
+    border-left: 1px solid black;
 }
 
 .toolbar {
-    padding: 5px;
+    padding: 4px;
     background-color: #eed;
     text-align: center;
     border-bottom: 1px solid black;
@@ -61,11 +61,9 @@ html,body {
 
 #errpathwin {
     position: absolute;
-    top: 46px;
+    top: 40px;
     bottom: 0px;
     width: 100%;
-    margin: 0px;
-    padding: 0px;
     vertical-align: top;
     overflow: auto;
     background-color: white;
@@ -93,9 +91,9 @@ html,body {
     margin: 0px;
 }
 
-#tabContent { /* no css for tabcontent, only children are format */
+#tabContent {
     position: absolute;
-    top: 46px;
+    top: 40px;
     bottom: 0px;
     left: 0px;
     right: 0px;
@@ -111,7 +109,7 @@ html,body {
 
 #cfawin,#artwin {
     position: absolute;
-    top: 40px;
+    top: 27px;
     bottom: 0px;
     left: 0px;
     right: 0px;
@@ -140,8 +138,8 @@ a {
 }
 
 a.action {
-    height: 33px;
-    line-height: 33px;
+    height: 29px;
+    line-height: 29px;
     display: inline-block;
     padding-left: 5px;
     padding-right: 5px;
@@ -170,46 +168,46 @@ a.action:hover {
 
 #zoomSlider {
     position: absolute;
-    top: 46px;
+    top: 41px;
     left: 0px;
     right: 0px;
-    height: 43px;
-    z-index: 2; // slider is over content
-    padding: auto;
+    height: 25px;
+    z-index: 2; /* slider is over content */
     border-bottom: 1px solid black;
-    background: #eee;
-    padding: auto;
+    float: right;
 }
 
-#zoomLevelLabel {
-    text-align: center;
+#zoomSlider #zoomLevelLabel {
+    float: right;
+    line-height: 25px;
 }
 
-#zoomSliderContainer { /* DO NOT CHANGE, USED FOR CALCULATION */
+#zoomSlider #zoomSliderContainer { /* DO NOT CHANGE, USED FOR CALCULATION */
     width: 400px;
     overflow-x: scroll;
     overflow-y: hidden;
     height: 20px;
-    margin: auto;
+    float: right;
 }
 
-#zoomSliderContent { /* DO NOT CHANGE, USED FOR CALCULATION */
+#zoomSlider #zoomSliderContent { /* DO NOT CHANGE, USED FOR CALCULATION */
     width: 2300px;
     height: 18px;
 }
+
+#zoomSlider #functionSelector {
+    float: left;
+    line-height: 25px;
+}
+
 </style>
     </head>
 
     <body>                
         <div class="toolbar" id="header">
-            <h1>CPAChecker Report</h1>
+            <h1>CPAchecker Report</h1>
             <small>Generated: {{{time_generated}}}</small>
             <h3 id="cfalabel" style="display:none;">main</h3>
-            <fieldset>
-                <legend>Displayed CFA</legend>
-                Function
-                <select id="functionselect"></select>
-            </fieldset>
         </div>
 
         <div id="leftContent">
@@ -236,6 +234,10 @@ a.action:hover {
                     <div id="zoomSliderContent"></div>
                 </div>
                 <div id="zoomLevelLabel">100 %</div>
+                <div id="functionSelector">
+                    <span>Displayed CFA </span>
+                    <select id="functionselect"></select>
+                </div>
             </div>
 
             <div id="tabContent">
