table-generator modified: middleLine is movable now.
the middleLine between the two columns can be moved sidewards like a window border. 
just move the small black line between the columnHeaders, 
it will become green (hover) and orange (moving). 
colors are for easier testing and can be changed later :-)

however there is a little bug, because of the use of iframes in the art- and cfa-tab: 
if you press the mouse on the middleLine and move the cursor into the iframe, you can release the mouse, and the middleLine follows your cursor if you leave the iframe again. than you have to click outside the iframe again to stop this behaviour.
the reason for this is, that iframes (and their content) are not part of the current document.

because of this bug, the middleLine is only between the headers (toolbars) and not between the bodies (errorpathwin, tabs) of the columns.

git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@4027 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/scripts/report-template.html
+++ b/scripts/report-template.html
@@ -14,7 +14,7 @@ html,body {
 }
 
 #header {
-    position: absolute;
+    position: fixed;
     left: 0px;
     right: 0px;
     padding: 7px;
@@ -50,6 +50,22 @@ html,body {
     min-width: 400px;
     border-top: 1px solid black;
     border-left: 1px solid black;
+}
+
+#middleLine {
+    position: absolute;
+    top: 40px;
+    left: 450px;
+    height: 39px;
+    width: 4px;
+    z-index: 100; /* in front of all content */
+    border: 1px solid black;
+    background-color: black;
+    cursor: col-resize;
+}
+
+#middleLine:hover {
+    background-color: lime;
 }
 
 .toolbar {
@@ -219,6 +235,9 @@ a.action:hover {
             <div id="errpathwin"></div>
         </div>
 
+        <div id="middleLine" onmousedown="changeWidthMouseDown()">
+        </div>
+
         <div id="rightContent">
             <div class="toolbar" onclick="setActiveWindow(event);">
                 <a class="action" id="show_cfa">CFA</a>
@@ -319,6 +338,40 @@ a.action:hover {
 
             String.prototype.startsWith = function(str) {
                return (this.match("^" + str) == str);
+            }
+        </script>
+
+        <script>
+            /* add listeners for mouseMove and mouseUp, for changing the size,
+            add functions for not selecting text while moving the mouse. */
+            function changeWidthMouseDown() {
+                console.log('change column width - mouse down');
+                document.getElementById('middleLine').style.backgroundColor = 'orange';
+                document.onmousemove = changeWidthMouseMove;
+                document.onmouseup = changeWidthMouseUp;
+                document.onselectstart = function() {return false;};
+                document.onmousedown = function() {return false;};  // for firefox
+            }
+
+            /* remove all listeners added on mouseDown */
+            function changeWidthMouseUp() {
+                console.log('change column width - mouse up');
+                document.getElementById('middleLine').style.backgroundColor = null;
+                document.onmousemove = null;
+                document.onmouseup = null;
+                document.onselectstart = null;
+                document.onmousedown = null;  // for firefox
+            }
+
+            /* take mousePosition and set new widths and positions */
+            function changeWidthMouseMove(event) {
+            	/* leftContentWidth is at least 150px */
+                leftContentWidth = Math.max(event.pageX - 2, 150);
+            	console.log('move to ' + leftContentWidth);
+
+                document.getElementById('middleLine').style.left = leftContentWidth + 'px';
+                document.getElementById('leftContent').style.width = leftContentWidth + 'px';
+                document.getElementById('rightContent').style.left = (leftContentWidth + 5) + 'px';
             }
         </script>
 
