report-template modified: clickable edges in svgs get the attribute "cursor='pointer'". the symbol of the mouse-cursor is the same as if the edge would be a normal link.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@4245 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/scripts/report-template.html
+++ b/scripts/report-template.html
@@ -584,6 +584,7 @@ a.action:hover {
                         edges[edgeid] = svgedge;
                         
                         svgedge.onclick = edge_clickaction(edgeid);
+                        svgedge.setAttribute('cursor', 'pointer');
                     }
                     self.cfacache[self.active_function] = cfa;
                     self.active_cfa = cfa;
@@ -894,7 +895,8 @@ a.action:hover {
                 self.onready = function() {
                     var edges = self.svgdoc.getElementsByClassName('edge');
                     for (var i = 0; i < edges.length; i++) {
-                       edges[i].onclick = edge_clickaction;
+                        edges[i].onclick = edge_clickaction;
+                        edges[i].setAttribute('cursor', 'pointer');
                     }
                     
                 };
