Update the remaining places where predicate abstraction was mentioned and change it to predicate analysis. I hope I found all.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@4348 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/expected-results/predicateAnalysis.table.html
+++ b/test/expected-results/predicateAnalysis.table.html
@@ -34,8 +34,8 @@
         <tr><td>limits</td><td colspan="14">timelimit: 1800 s, memlimit: 14000 MB</td></tr>
         <tr><td>system</td><td colspan="14">os: Linux 2.6.35-28-generic x86_64<br>cpu: AMD Phenom(tm) II X4 955 Processor<br>cores: 4,             frequency: 3200 MHz, ram: 16208800 kB</td></tr>
         <tr><td>date of test</td><td colspan="14">2011-04-20</td></tr>
-        <tr><td>test</td><td colspan="7">predicateAbstraction</td><td colspan="7">predicateAbstraction-lbe</td></tr>
-        <tr id="options"><td>options</td><td colspan="7">-setprop output.disable=true<br>-config test/config/predicateAbstraction.properties<br>-heap 12000m</td><td colspan="7">-setprop output.disable=true<br>-config test/config/predicateAbstraction-lbe.properties<br>-heap 12000m</td></tr>
+        <tr><td>test</td><td colspan="7">predicateAnalysis</td><td colspan="7">predicateAnalysis-lbe</td></tr>
+        <tr id="options"><td>options</td><td colspan="7">-setprop output.disable=true<br>-config test/config/predicateAnalysis.properties<br>-heap 12000m</td><td colspan="7">-setprop output.disable=true<br>-config test/config/predicateAnalysis-lbe.properties<br>-heap 12000m</td></tr>
         <tr id="columnTitles"><td> </td><td>status</td><td>cputime</td><td>walltime</td><td>total</td><td>reached</td><td>abstractions</td><td>refinements</td><td>status</td><td>cputime</td><td>walltime</td><td>total</td><td>reached</td><td>abstractions</td><td>refinements</td></tr>
     </thead>
     <tbody>
