Invert zoom slider of error path report such that it behaves similar to other software: 100% is on the right, 5% is on the left. This fixes #194.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@15433 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/scripts/report-template.html
+++ b/scripts/report-template.html
@@ -227,6 +227,7 @@ a.action:hover {
 }
 
 #zoomSlider_tab_art, #zoomSlider_tab_cfa { /* DO NOT CHANGE, USED FOR CALCULATION */
+    direction: rtl;
     width: 400px;
     overflow-x: scroll;
     overflow-y: hidden;
@@ -474,7 +475,7 @@ a.action:hover {
             /* This function reads the position of a slider and calculates the zoomLevel. */
             function setZoomLevel(sliderId) {
               var tabId = sliderId.substring(11);
-              zoomData[tabId].zoomLevel = Math.round(100 - (document.getElementById(sliderId).scrollLeft / 20));
+              zoomData[tabId].zoomLevel = Math.round(100 + (document.getElementById(sliderId).scrollLeft / 20));
               document.getElementById('zoomLabel_' + tabId).innerHTML =  zoomData[tabId].zoomLevel + ' %';
             }
 
