--- a/scripts/table-generator-template.html
+++ b/scripts/table-generator-template.html
@@ -1240,7 +1240,7 @@ $(document).ready(function() {
 <table id="dataTable">
 <thead>
 {{py:
-def formatOptions(str):
+def format_options(str):
     '''Helper function for formatting the content of the options line'''
     optionsAsList = html_quote(' ' + str).split(' -')
     optionsAsList = ['<span style="display:block"> -' + option + '</span>' for option in optionsAsList[1:]]
@@ -1252,7 +1252,7 @@ def formatOptions(str):
   <tr id="{{line.id}}" class="{{line.id}}">
     <td>{{line.name}}</td>
     {{for cell, width in line.content}}
-    <td colspan="{{width}}">{{formatOptions(cell) if line.id == 'options' else cell}}</td>
+    <td colspan="{{width}}">{{format_options(cell) if line.id == 'options' else cell}}</td>
     {{endfor}}
   </tr>
   {{endif}}
@@ -1261,7 +1261,7 @@ def formatOptions(str):
 
 <tbody>
 {{for line in body}}
-<tr><td title="Click here to show source code"><a href="{{line.filePath|url}}">{{line.shortFileName}}</a></td>
+<tr><td title="Click here to show source code"><a href="{{line.file_path|url}}">{{line.short_filename}}</a></td>
   {{for runResult in line.results}}
   {{for column, value in zip(runResult.columns, runResult.values)}}
   {{if column.title == 'status'}}
@@ -1271,7 +1271,7 @@ def formatOptions(str):
     <td class="status {{runResult.category}}">{{(value or '-').lower()}}</td>
     {{endif}}
   {{else}}
-  <td class="{{runResult.category}} value">{{formatValue(value, column)}}</td>
+  <td class="{{runResult.category}} value">{{format_value(value, column)}}</td>
   {{endif}}
   {{endfor}}
   {{endfor}}
@@ -1281,11 +1281,11 @@ def formatOptions(str):
 
 <tfoot>
 {{py:
-def formatStatTitle(stat, column, formatValue):
+def format_stat_title(stat, column, format_value):
     '''Helper function to create the tooltip of a status cell containing average etc.'''
     if not stat or not stat.avg:
         return None
-    values = {k: formatValue(v, column) for k, v in stat.__dict__.items()}
+    values = {k: format_value(v, column) for k, v in stat.__dict__.items()}
     return 'Min: {min}, Max: {max}, Average: {avg}, Median: {median}'.format(**values)
 }}
 {{py:line = head['title']}}
@@ -1299,7 +1299,7 @@ def formatStatTitle(stat, column, formatValue):
   <tr class="statistics">
     <td {{attr(title=line.description)}}>{{line.title}}</td>
     {{for cell, column in zip(line.content, flatten(columns))}}
-    <td {{attr(class_=line.id, title=formatStatTitle(cell, column, formatValue))}}>{{formatValue(cell, column)}}</td>
+    <td {{attr(class_=line.id, title=format_stat_title(cell, column, format_value))}}>{{format_value(cell, column)}}</td>
     {{endfor}}
   </tr>
 {{endfor}}
