errorpath is marked in cfa (not finished)
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/counterexample-report@17793 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/Counterexample_Report/index.html
+++ b/Counterexample_Report/index.html
@@ -74,7 +74,7 @@
                     </div>
                     <label>{{cfa.functions[cfa.selectedOption]}}</label>
                 </div>
-                <div class="cfaContent">
+                <div class="cfaContent" ng-init="report.setReferences()">
 <svg  ng-show = "cfa.isSet(0)" width="2384pt" height="129pt"
  viewBox="0.00 0.00 2384.00 129.00" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 <g id="graph0" class="graph" transform="scale(1 1) rotate(0) translate(4 125)">
