--- a/Counterexample_Report/index_template.html
+++ b/Counterexample_Report/index_template.html
@@ -74,7 +74,7 @@
                     </div>
                     <label>{{cfa.functions[cfa.selectedOption]}}</label>
                 </div>
-                <div class="cfaContent">
+                <div class="cfaContent"  ng-init="report.setReferences()">
                     <!--CFAFUNCTIONGRAPHS-->
                 </div>
             </div>
