get path of sourcefile from CPAchecker.java, realize jumps inside of the html: from errorpath to ARG/CFA/Source, from ARG to CFA/Source, from CFA to source, from CFA-function-nodes to CFA of that function (new feature)
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/counterexample-report@17821 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/Counterexample_Report/index_template.html
+++ b/Counterexample_Report/index_template.html
@@ -72,7 +72,7 @@
                             <li ng-repeat="func in report.functions"><a ng-click="report.setCFAFunction($index)">{{func}}</a></li>
                         </ul>
                     </div>
-                    <label>{{report.functions[report.selectedOption]}}</label>
+                    <label>{{report.functions[report.selectedCFAFunction]}}</label>
                 </div>
                 <div class="cfaContent">
                     <!--CFAFUNCTIONGRAPHS-->
